--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,13 +14,14 @@ h1 {
 }
 
 .legend {
-  padding: 20px;
+  padding: 10px;
   font-family: Sanchez, serif;
   font-size: 16px;
   font-weight: bold;
   line-height: 18px;
-  color: #555;
-  background-color: white;
+  color: rgb(12, 1, 1);
+  text-align: inherit;
+  /* background-color: white; */
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
